# NiMengjia_hw1

./: CMakeLists.txt  README.md
src/: algebra.c
